@@ -131,10 +131,10 @@ void                  g_set_application_name (const gchar *application_name);
 G_CONST_RETURN gchar*    g_get_user_data_dir      (void);
 G_CONST_RETURN gchar*    g_get_user_config_dir    (void);
 G_CONST_RETURN gchar*    g_get_user_cache_dir     (void);
-G_CONST_RETURN gchar * G_CONST_RETURN * g_get_system_data_dirs   (void);
-G_CONST_RETURN gchar * G_CONST_RETURN * g_get_system_config_dirs (void);
+G_CONST_RETURN gchar* G_CONST_RETURN * g_get_system_data_dirs   (void);
+G_CONST_RETURN gchar* G_CONST_RETURN * g_get_system_config_dirs (void);
 
-G_CONST_RETURN gchar * G_CONST_RETURN * g_get_language_names (void);
+G_CONST_RETURN gchar* G_CONST_RETURN * g_get_language_names (void);
 
 typedef struct _GDebugKey	GDebugKey;
 struct _GDebugKey
